# Emu-GMM

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE.org  Makefile  README.org  pyproject.toml
.claude/agents/: VENDORED.md
.claude/workflows/: adversarial-change-audit.js
.coder/: ledger.md  ledger.org  review-2026-07-02.md  reviewgate.slurm
.github/workflows/: ci.yml
docs/: api-sketch.org  design.org  handoff-2026-05-31.org  handoff-2026-06-10.org  handoff-2026-06-11.org  handoff-2026-06-17-rtr-triage.org  handoff.org  howto.org  implementation-plan-v2-manifold.org  implementation-plan.org  manifold-epic-progress.org  manifold-slice-scoping.md  mcar-asymptotics.org  refs.bib
docs/design-notes/: pymanopt-integration.org  pymanopt_poc.py
docs/migration/: manifoldgmm-to-emu-gmm.org
docs/recovered/: README.org  docs-design-sweep_migration_uncommitted.patch  v2-chunk-a-types-ops_commits.txt  v2-chunk-a-types-ops_committed-diffstat.txt  v2-chunk-a-types-ops_uncommitted.patch
docs/reviews/: design-fidelity-synthesis.org  design-review-2026-06-09.org  lens-a-orthogonality.org  lens-b-commitments.org  lens-c-coherence.org  lens-d-design-drift.org  plan-fidelity.org  plan-section-13-literature.org  plan-section-2-probe.org  pymanopt_parity_harness.org  pymanopt_parity_harness.py  pymanopt_parity_harness_stub_output.txt  v1x-api-design.org  v1x-correctness-review.org  v1x-jax-ad-review.org  v1x-math-correctness.org  v1x-performance-review.org  v1x-test-gaps.org
docs/validation/: kagg-iv-cross-check-2026-05-29.org  ladder-mc-2026-06-10.org  seasonality-mc-2026-05-29.org
docs/validation/data/: design_aware.json  design_aware.org  design_aware__design_aware_uncoupled.csv  design_aware__fewG12_design_aware.csv  design_aware__fewG12_design_aware_nodof.csv  design_aware__nostrat_design_aware.csv  design_aware__stratified.csv  misspec_power.json  misspec_power.org  misspec_power__delta0.0_cluster_psu.csv  misspec_power__delta0.1_cluster_psu.csv  misspec_power__delta0.3_cluster_psu.csv  misspec_steps.json  misspec_steps.org  misspec_steps__iterations.csv  ridge_binding.json  ridge_binding.org  ridge_binding__da_G5.csv  ridge_binding__da_fewG12_eps1e-2.csv  ridge_binding__noeps_strat.csv  ridge_binding__strat_eps3e-2.csv  size_iid_vs_cluster.json  size_iid_vs_cluster.org  size_iid_vs_cluster__fewG12_cluster_psu.csv  size_iid_vs_cluster__fewG12_cluster_psu_dof.csv  size_iid_vs_cluster__fewG12_iid.csv  size_iid_vs_cluster__rho0.5_cluster_psu.csv  size_iid_vs_cluster__rho0.5_cluster_psu_dof.csv  size_iid_vs_cluster__rho0.5_iid.csv  size_iid_vs_cluster__rho0_cluster_psu.csv  size_iid_vs_cluster__rho0_iid.csv  stratified.json  stratified.org  stratified__G20_cluster_psu_dof.csv  stratified__G20_stratified.csv  stratified__G20_stratified_fpc.csv  (+8 more)
examples/: README.org  coin_plus_noise.py  empirical_bootstrap.py  fair_coin.py  hierarchical.py  panel_regression.py  run_euler.py  twfe.py
examples/blp/: .gitignore  README.md  REPORT.md  benchmark.py  blp_data.py  blp_model.py  build_reference.py  run_emu.py  sanity_check.py  scaling_benchmark.py
scripts/: freeze_seasonality_extract.py
scripts/validation/: ladder_mc.py
src/emu_gmm/: __init__.py  diagnostics.py  estimator.py  law.py  optimizer.py  parameter_space.py  penalty.py  persistence.py  regularization.py  runtime.py  types.py  weighting.py
tests/: conftest.py  test_build_estimator.py  test_diagnostics.py  test_estimator.py  test_estimator_analytical.py  test_estimator_anchor_tau.py  test_estimator_binding_ridge.py  test_estimator_dimensions.py  test_estimator_empirical.py  test_estimator_jit_inference.py  test_estimator_jit_vmap.py  test_estimator_positive.py  test_estimator_realdata.py  test_estimator_traced_measure.py  test_estimator_unequal_nj.py  test_import.py  test_iterated_traced_args.py  test_law.py  test_moment_restriction_primitives.py  test_optimizer.py  test_optimizer_linear.py  test_optimizer_pytree.py  test_panel_regression.py  test_penalty.py  test_persistence.py  test_pinv_eigvalrule.py  test_regularization.py  test_runtime.py  test_sigma_sandwich.py  test_types.py  test_weighting.py  test_weighting_outer_loop_protocol.py
tests/_internal/: test_axes.py  test_cholesky.py  test_fn_cache.py  test_labels.py  test_params.py  test_params_manifold_leaf.py  test_params_spec_builder_phase2.py  test_params_v2.py
tests/covariance/: test_analytical.py  test_clustered.py  test_iid.py  test_stratified.py  test_sum.py  test_synthetic.py
tests/data/: seasonality_euler_extract.json  seasonality_euler_extract.npz
tests/examples/: __init__.py  test_coin_plus_noise.py  test_empirical_bootstrap.py  test_fair_coin.py  test_hierarchical.py  test_twfe.py
tests/inference/: test_adaptive.py  test_cluster_bootstrap.py  test_identification.py  test_j_test.py  test_k_confidence_set.py  test_k_statistic.py  test_k_statistic_gauge.py  test_profiled_confidence_set.py  test_wild_bootstrap.py
tests/manifolds/: test_cond_info_gauge.py  test_estimator_inference_phase4.py  test_estimator_result_phase5.py  test_euclidean.py  test_euclidean_nonscalar_110.py  test_gamma_leaf_order_117.py  test_interval.py  test_invariants.py  test_iterated_weighting_manifold.py  test_manifold_acceptance_phase6.py  test_manifold_acceptance_phase7.py  test_manifold_result_pickle.py  test_parameter_space.py  test_positive.py  test_product.py  test_psd_fixed_rank.py  test_result_phase5_v1_nonregression.py  test_riemannian_lm_advisory.py  test_riemannian_lm_ftol.py  test_riemannian_lm_phase3.py  test_riemannian_lm_traced_args.py  test_rtr_gauge_numerical.py  test_rtr_hvp.py  test_rtr_integration.py  test_rtr_pymanopt_parity.py  test_rtr_reductions.py  test_rtr_tcg.py  test_rtr_trust_region.py
tests/measures/: test_analytical.py  test_empirical.py  test_empirical_namedarray_mask.py  test_empirical_reverse_ad_nan_safety.py  test_expectation_and_contributions.py  test_moments_and_contributions.py  test_synthetic.py
tests/numerics/: test_ridge_inverse.py
tests/studies/: test_conditioning.py  test_replicate.py  test_study_smoke.py  test_summaries.py
(+50 files in other folders)
