[project]
name = "emu-gmm"
version = "0.1.0a0"
description = "Measure-theoretic Generalized Method of Moments estimation; estimation via E_mu."
readme = "README.org"
requires-python = ">=3.11,<4.0"
license = { text = "CC-BY-NC-SA-4.0" }
authors = [{ name = "Ethan Ligon", email = "ligon@berkeley.edu" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering"
]
dependencies = [
  "jax>=0.4.25",
  "jaxtyping>=0.2.30",
  "haliax>=1.3",
  "jax_dataclasses>=1.6.1",
  "optimistix>=0.0.7",
  "numpy>=1.26",
  "scipy>=1.11"
]

[tool.poetry]
package-mode = true
packages = [{ include = "emu_gmm", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
jax = ">=0.4.25"
jaxtyping = ">=0.2.30"
haliax = ">=1.3"
jax_dataclasses = ">=1.6.1"
optimistix = ">=0.0.7"
numpy = ">=1.26"
scipy = ">=1.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-xdist = "^3.0"
ipython = "^8.26.0"
ruff = "^0.5.4"
black = "^24.4.2"
mypy = "^1.10.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "slow: tests that perform heavier computations"
]

[tool.black]
target-version = ["py311"]
line-length = 88

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-third-party = ["jax", "jaxtyping", "haliax", "jax_dataclasses", "optimistix", "numpy", "scipy"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
ignore_missing_imports = true
strict_optional = true

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
