[project]
name = "emu-gmm"
version = "0.3.1"
description = "Measure-theoretic Generalized Method of Moments estimation; estimation via E_mu."
readme = "README.org"
requires-python = ">=3.11,<4.0"
license = { text = "CC-BY-NC-SA-4.0" }
authors = [{ name = "Ethan Ligon", email = "ligon@berkeley.edu" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering"
]
dependencies = [
  "jax>=0.4.25",
  "jaxtyping>=0.2.30",
  "haliax>=1.4.dev452,<1.5",
  "jax_dataclasses>=1.6.1",
  "optimistix>=0.0.7",
  "numpy>=1.26",
  "scipy>=1.11",
  "pandas>=2.0"
]

[tool.poetry]
package-mode = true
packages = [{ include = "emu_gmm", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
jax = ">=0.4.25"
jaxtyping = ">=0.2.30"
# PyPI's stable haliax 1.3 imports jax._src.tree_util.BuiltInKeyEntry, which
# current JAX no longer exposes; upstream main is compatible but PyPI forbids
# direct (git URL) dependencies in published metadata (the v0.3.0 publish
# rejection). haliax auto-publishes dev wheels from main: 1.4.dev452 is built
# from 280f49fb (2025-11-08) -- the EXACT revision the previous git pin had
# locked and the whole v2 validation ran against. The pre-release specifier
# is deliberate and PEP 440-explicit (it enables pre-release resolution for
# this requirement); the <1.5 ceiling guards API drift, and a future stable
# 1.4 satisfies the range. Suite re-validated against the PyPI wheel before
# this change landed.
haliax = { version = ">=1.4.dev452,<1.5", allow-prereleases = true }
jax_dataclasses = ">=1.6.1"
optimistix = ">=0.0.7"
numpy = ">=1.26"
scipy = ">=1.11"
pandas = ">=2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-xdist = "^3.0"
ipython = "^8.26.0"
ruff = "^0.5.4"
black = "^24.4.2"
mypy = "^1.10.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "slow: tests that perform heavier computations"
]

[tool.black]
target-version = ["py311"]
line-length = 88

[tool.ruff]
target-version = "py311"
line-length = 88
extend-exclude = [".claude", ".coder-session", "examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
# E501 (line length): handled by black.
# F722 (syntax error in forward annotation), F821 (undefined name in
# forward annotation), UP037 (remove quotes from type annotation):
# all false positives on jaxtyping shape strings like
# Float[Array, "M K"]. Suppressed project-wide.
ignore = ["E501", "F722", "F821", "UP037"]

[tool.ruff.lint.isort]
known-third-party = ["jax", "jaxtyping", "haliax", "jax_dataclasses", "optimistix", "numpy", "scipy"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
ignore_missing_imports = true
strict_optional = true

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
